--- a/new_server/config.yaml
+++ b/new_server/config.yaml
@@ -22,7 +22,9 @@ DB_TABLE: Info
 #     pre_coords POINT,
 #     coords POINT,
 #     speed_kph FLOAT,
-#     updated_at DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
+#     updated_at DATETIME 
+#       DEFAULT CURRENT_TIMESTAMP 
+#       ON UPDATE CURRENT_TIMESTAMP
 # );
 
 # INSERT INTO Info (id, pre_coords, coords, speed_kph)
@@ -30,8 +32,12 @@ DB_TABLE: Info
 #     1,
 #     POINT(121.5650, 25.0328),   -- pre_coords: 台北 101
 #     POINT(121.5655, 25.0332),   -- coords: 台北附近
-#     30.5                        -- speed_kph: 假設速度為 30.5 km/h
+#     30.4                        -- speed_kph: 假設速度為 30.5 km/h
 # );
 
 
 # SELECT * FROM Info
+
+# UPDATE Info
+# SET speed_kph=30.4
+# WHERE id=1;
